[package]
name = "no-std-async"
version = "1.1.1"
description = "Async synchronization primitives for #[no_std] rust"
license = "MIT"
documentation = "https://docs.rs/no-std-async"
repository = "https://github.com/lylythechosenone/no-std-async"
edition = "2021"

[dependencies]
pin-list = "0.1.0"
pin-project = "1.1.3"
spin = "0.9.8"

[dev-dependencies]
pollster = "0.3.0"
